# notebooklm-youtube

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: analyze.py  discover.py  frames.py  ingest.py  models.py  notebooklm_push.py  pipeline.py  scaffold.py  synthesize.py  transcript.py  utils.py
tests/: conftest.py  test_analyze.py  test_discover.py  test_frames.py  test_ingest.py  test_models.py  test_scaffold.py  test_synthesize.py  test_transcript.py  test_utils.py
