[project]
name = "notebooklm-youtube"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.11.18",
    "openai-whisper>=20231117",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
